pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-ssl-passthrough-and-missing-auth-secret.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-ssl-passthrough-and-missing-auth-secret
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret-type: "auth-file"
    nginx.ingress.kubernetes.io/auth-secret: "default/missing-basic-auth"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"

spec:
  ingressClassName: nginx
  rules:
    - host: passthrough-missing-auth.whoami.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-tls
                port:
                  number: 443
